--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "express": "https://aistudiocdn.com/express@^5.1.0",
     "dotenv/": "https://aistudiocdn.com/dotenv@^17.2.3/",
-    "cors": "https://aistudiocdn.com/cors@^2.8.5"
+    "cors": "https://aistudiocdn.com/cors@^2.8.5",
+    "jsonwebtoken": "https://aistudiocdn.com/jsonwebtoken@^9.0.2",
+    "mysql2/": "https://aistudiocdn.com/mysql2@^3.15.3/",
+    "bcryptjs": "https://aistudiocdn.com/bcryptjs@^3.0.3"
   }
 }
 </script>
